--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -3,7 +3,7 @@
 
 <% form_for @submission do |f| %>
     <label>Title</label>
-    <%= f.text_field :title %>
+    <%= f.text_field :id %>
     
     <%= f.submit %>
 <% end %>
