Created user form for new user

--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome homepage</h1> 
 <p1> Find me in app/views/welcome/homepage.html.haml</p>
 <%= link_to "Bibliography", biblios_index_path %>
+|| <%= link_to "Login", user_new_path %>
