--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -3,3 +3,4 @@
 <%= link_to "Bibliography", biblios_index_path %>
 || <%= link_to "Create User", user_new_path %>
 || <%= link_to "Login", user_login_path %>
+|| <%= link_to "Show User", user_show_path %>
