--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome homepage</h1> 
 <p1> Find me in app/views/welcome/homepage.html.erb</p>
 <%= link_to "Bibliography", biblios_index_path %>
-|| <%= link_to "Create User", user_new_path %>
-|| <%= link_to "Login", user_login_path %>
-|| <%= link_to "Show User", user_show_path %>
+|| <%= link_to "Create User", users_new_path %>
+|| <%= link_to "Login", users_login_path %>
+|| <%= link_to "Show User", users_show_path %>
