created session controller and helper

--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,18 +1,10 @@
-<% @page_title = "UserAuth | Signup" %>
-<div class="Sign_Form">
-  <h1>Sign Up</h1>
-  <%= form_for(:user, :url => {:controller => 'users', :action => 'create'}) do |f| %>
-    <p> Username:</br> <%= f.text_field :user_name%> </p>
-    <p> Email:</br> <%= f.text_field :user_email_id%> </p>
-    <p> Password:</br> <%= f.password_field :user_password%></p>
-    <p> Password Confirmation:</br> <%= f.password_field :password_confirmation%> </p>
-    <%= f.submit :Signup %>
-  <% end %>
-  <% if @user.errors.any? %>
-    <ul class="Signup_Errors">
-    <% for message_error in @user.errors.full_messages %>
-      <li>* <%= message_error %></li>
-    <% end %>
-    </ul>
-  <% end %>
-</div>
+<h1>Users#new</h1>
+<p>create a new instance of a user</p>
+
+<%= simple_form_for(@user) do |f| %>
+  <%= f.input :user_name %>
+  <%= f.input :user_email_id %>
+  <%= f.input :user_password %>
+  <%= f.input :password_confirmation %>
+  <%= f.button :submit %>
+<%= end%>
