--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+      <%= image_tag("logo.png", :alt => "rss feed", :width => "320", :height => "60") %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
