--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Rails Devise Roles" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Rails Devise Roles" %>">
+    <title><%= content_for?(:title) ? yield(:title) : "SERLER" %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "SERLER-admin work flow" %>">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
@@ -12,9 +12,14 @@
     <header>
       <%= render 'layouts/navigation' %>
     </header>
-    <main role="main">
+    <main role="main" class="container min-height">
        <%= render 'layouts/messages' %>
        <%= yield %>
     </main>
   </body>
+
+  <footer>
+    <div class="container">©2015 AUT University All Rights Reserved <div class="pull-right">Developed by Team Gamma</div></div>
+    
+  </footer>
 </html>
