--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,10 +1,11 @@
 <%# add navigation links to this file %>
 <% if user_signed_in? %>
+  <li><%= link_to 'Home', root_path %></li>
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
-  <li><%= link_to 'Log out', destroy_user_session_path, :method=>'delete' %></li>
+  <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
 <% else %>
   <li><%= link_to 'Home', root_path %></li>
-  <li><%= link_to 'Log in', new_user_session_path %></li>
+  <li><%= link_to 'Sign in', new_user_session_path %></li>
   <li><%= link_to 'Create Account', new_user_registration_path %></li>
 <% end %>
 <% if user_signed_in? %>
