--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -62,7 +62,33 @@ main {
   }
 .min-height {
   min-height: 493px;
+  background-color: #fff;
 }
+.pure-u-1-3 {
+  font-size: 12px;
+
+}
+
+.Media-header {
+  font-size: 24px;
+  font-weight: 200;
+  color:#71C000;
+}
+
+.Media-articles-item-title {
+  font-size:20px;
+}
+
+.Media-articles-item > h3 > a  {
+  color:#000;
+  cursor: pointer;
+}
+
+
+.Media-articles-item > h3 > a:hover  {
+  color:#71C000;
+}
+
 section {
   @extend .row;
   margin-top: 20px;
