--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,4 +1,51 @@
-<h3>Welcome</h3>
+<hr>
+<h3>Welcome to SERLER</h3>
+<hr>
 <!--= link_to 'Users:', users_path-->
-
-<p>Number of registered users is <%= User.count %>.</p>
+<div class="pure-g">
+    <div class="pure-u-1-3" style="float: left; padding:15px;">
+        <div class="Media">
+            <h2 class="Media-header"><i class="icon icon-clock"></i><span>Just Published</span></h2>
+            <div id="mostRecentPublicationsTab" class="Media-box Media-box--gradient">
+                <ul class="Media-articles--column u-notList">
+                    <li class="Media-articles-item" style="display: list-item; list-style: none; opacity: 1;">
+                        <h3><a class="Media-articles-item-title">Software developmet methods, SERLER </a></h3>
+                        <h4 class="Media-articles-item-meta">Volume: 21&nbsp;&nbsp;Issue: 6 </h4><span class="Media-articles-item-meta--alternate">Nov.-Dec. 2015</span></li>
+                    <li class="Media-articles-item" style="display: list-item; list-style: none; opacity: 1;">
+                        <h3><a class="Media-articles-item-title">Software developmet methods, SERLER </a></h3>
+                        <h4 class="Media-articles-item-meta">Volume: 2&nbsp;&nbsp;Issue: 3 </h4><span class="Media-articles-item-meta--alternate">Sept. 2015</span></li>
+                    <li class="Media-articles-item" style="display: list-item; list-style: none; opacity: 1;">
+                        <h3><a class="Media-articles-item-title">Software developmet methods, SERLER </a></h3>
+                        <h4 class="Media-articles-item-meta">Volume: 63&nbsp;&nbsp;Issue: 9 </h4><span class="Media-articles-item-meta--alternate">May1, 2015</span></li>
+                    <li class="Media-articles-item" style="display: list-item; list-style: none; opacity: 1;">
+                        <h3><a class="Media-articles-item-title">Software developmet methods, SERLER </a></h3>
+                        <h4 class="Media-articles-item-meta">Volume: 12&nbsp;&nbsp;Issue: 5 </h4><span class="Media-articles-item-meta--alternate">Sept.-Oct. 1 2015</span></li>
+                    <li class="Media-articles-item--endcap" style="display: list-item; list-style: none; opacity: 1;"><a href="#">View More …</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="pure-u-1-3" style="float: left; padding: 15px;">
+        <div class="Media">
+            <h2 class="Media-header"><i class="icon icon-speedometer"></i><span>Most Popular</span></h2>
+            <div id="mostDownloadedArticlesTab" class="Media-box Media-box--gradient">
+                <ul class="Media-articles--column u-notList">
+                    <li class="Media-articles-item" style="display: list-item; list-style: none; opacity: 1;">
+                        <h3><a class="Media-articles-item-title" >Software developmet methods, SERLER </a></h3>
+                        <h4 class="Media-articles-item-meta">Lei Xu;Chunxiao Jiang;Jian Wang;Jian Yuan…</h4> <span class="Media-articles-item-meta--alternate u-block">09 October 2014</span></li>
+                    <li class="Media-articles-item" style="display: list-item; list-style: none; opacity: 1;">
+                        <h3><a class="Media-articles-item-title" >Software developmet methods, SERLER </a></h3>
+                        <h4 class="Media-articles-item-meta">Zanella, A.;Bui, N.;Castellani, A.;Vangelista, L.…</h4> <span class="Media-articles-item-meta--alternate u-block">14 February 2014</span></li>
+                    <li class="Media-articles-item" style="display: list-item; list-style: none; opacity: 1;">
+                        <h3><a class="Media-articles-item-title" >Software developmet methods, SERLER </a></h3>
+                        <h4 class="Media-articles-item-meta">Xindong Wu;Xingquan Zhu;Gong-Qing Wu;Wei Ding</h4> <span class="Media-articles-item-meta--alternate u-block">26 June 2013</span></li>
+                    <li class="Media-articles-item" style="display: list-item; list-style: none; opacity: 1;">
+                        <h3><a class="Media-articles-item-title" >Software developmet methods, SERLER </a></h3>
+                        <h4 class="Media-articles-item-meta">Shannon, C.E.;</h4> <span class="Media-articles-item-meta--alternate u-block">July 1948</span></li>
+                    <li class="Media-articles-item--endcap" style="display: list-item; list-style: none; opacity: 1;"><a href="#">View More …</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<!--<p>Number of registered users is <%= User.count %>.</p>-->
