--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,8 +20,8 @@
         <%= f.password_field :password, :autocomplete => 'off', class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <%= f.label :confirmation %>
+        <%= f.password_field :confirmation, class: 'form-control' %>
       </div>
     </fieldset>
     <fieldset>
