--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -6,8 +6,8 @@
     <div class="form-group">
       <%= f.label :password, 'New password' %>
         <%= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control' %>
-      <%= f.label :confirmation, 'Confirm new password' %>
-        <%= f.password_field :confirmation, autocomplete: 'off', class: 'form-control' %>
+      <%= f.label :password_confirmation, 'Confirm new password' %>
+        <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
     </div>
      <%= f.submit 'Change my Password', :class => 'button right' %>
   <% end %>
