--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,7 +20,7 @@
         <%= f.password_field :password, :autocomplete => 'off', class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= f.label :confirmation %>
+        <%= f.label :password_confirmation %>
         <%= f.password_field :confirmation, class: 'form-control' %>
       </div>
     </fieldset>
